# transcriber

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  logging.py  main.py  menu.py  testing.py
engine/: __init__.py  base.py  faster_whisper.py
media/: __init__.py  audio.py
output/: __init__.py  text.py
tests/: test_config.py  test_media.py  test_output.py
