[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcriber"
version = "0.1.0"
description = "Offline MP3/MP4 transcription to TXT using faster-whisper."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "faster-whisper>=1.0.0",
  "psutil>=5.9.0",
  "textual>=0.58.0",
  "typer>=0.12.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
transcriber = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "engine*", "media*", "output*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
